Anotacoes das dicas de git

--- a/aulas/001.md
+++ b/aulas/001.md
@@ -3,6 +3,55 @@
 Vou listar alguns comandos que estamos aprendendo:
 
 - cd (navega entre pastas)
+exemplo para entrar dentro de uma pasta
 ```
 cd nomeDaPasta
 ```
+
+
+Exemplo para sair da pasta:
+
+```
+cd ..
+```
+
+- `mkdir` (cria pastas)
+Exemplo de como criar uma pasta
+
+```
+mkdir nomeDaPasta
+```
+
+
+# Dicas do git
+
+- `git init` (começar a seguir as pastas e arquivo de um projeto)
+Esse comando nós utilizamos um projetro com o Git
+Chamamos a pasta do projeto de repositorio ou só repo. Para usar ele só entrar na pasta do seu projeto e executar assim:
+```
+git init 
+```
+- `git status` (Informa o estado do repo)
+Ussando o comando acima voce tera como resultado informaçoes de como esta o estado dos arquivos e pastas, na verdade voce recebera informaçoes apenas dos arquivos e pastas novos, removidos ou alterados.
+
+- `git add` (segue os arquivos ou pastas no momento atual)
+Com o comando `git status` voce fica sabendo do rola dos arquivos e pastas e com o `git add` voce guarda este momento dos arquivos e pastas para em seguida para realizar o commit (nao lembra oq é comiit, ve abaixo ai)
+
+Se voce quer guardar o moneto de todos os arquivos e pastas só executar o comando abaixo:
+```
+git add
+```
+Mas se voce quer pegar apenas alguns arquivos, voce pode deixar o comando mais dereto, dessa forma:
+```
+git add pasta/arquivo
+```
+- `git commit`(Guarda o momento atual)
+com o `commit` nao é mais nescessario old ou com datas bizarras. Ele é o cara que garda o momento do seu repo.
+A parte legal é que voce deve e pode informar uma mensagem junto com o momento atual para ficar mais facil de achar esse estado se um dia precisar voltar nele. Ex:
+```
+git commit -m "Anotaçoes do git ate o commit"
+```
+- `git log`(lista dos estados que gardamos `commit`)
+Com esse comando conseguimos ver todos os `commit`s que ja fizemos na vida do repo que voce estiver :-)
+
+
